fix spacing on the grid

--- a/style.css
+++ b/style.css
@@ -16,10 +16,11 @@ button {
 }
 
 #container {
+  margin: auto;
   width: 960px;
   height: 960px;
   border: 3px solid black;
-  display: inline-grid;
+  display: grid;
 }
 
 .squares {
